# guitar-house

./: .gitignore  CHANGELOG.md  README.md  mise.toml  package.json  pnpm-lock.yaml  release-please-config.json
.cursor/rules/: atomic-edits.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AlphaTabScore.tsx  AudioPlayerBar.tsx  DocViewer.tsx  ImageScore.tsx  MetronomeBar.tsx  PdfScore.tsx  RateGroup.tsx  ResourcePicker.tsx  ScoreViewer.tsx  SplitPane.tsx  TapTempoModal.tsx  ToolBar.tsx  VideoPlayer.tsx  VolumeControl.tsx  audiobar.css.ts  docviewer.css.ts  metronome.css.ts  splitpane.css.ts  tap.css.ts  toolbar.css.ts  videoplayer.css.ts
apps/desktop/src/hooks/: useMediaShortcuts.ts  useMetronome.ts
apps/desktop/src/lib/: aiPrompt.ts  bpmDetect.ts  feedback.ts  heuristic.ts  platform.ts  scanner.ts  scoreBpm.ts  storage.ts
apps/desktop/src/pages/: ClassroomPage.tsx  LibraryPage.tsx  ManagePage.tsx  classroom.css.ts  library.css.ts
apps/desktop/src/styles/: layout.css.ts
docs/: test-report-20260709.md
scripts/: diag-bpm.ts  gen-manifest.ts  test-bpm.ts  test-scan.ts
