[package]
name = "guitar-house"
version = "0.1.0"
description = "吉他练习工具：本地视频播放 + 看谱 + 节拍器"
authors = ["yuchenxi"]
edition = "2021"

[lib]
name = "guitar_house_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
